--- a/product-inventory/Dockerfile
+++ b/product-inventory/Dockerfile
@@ -1,18 +1,4 @@
-# Use the official Python image as the base image
-
-# Set the working directory inside the container
-
-# Copy the requirements file to the working directory
-
-# Install the dependencies
-
-# Copy the rest of the application source code
-
-# Expose the port that the API listens on
-
-# Run the Flask application when the container starts
-
-FROM python:3.9-slim
+FROM python:3.10-slim
 
 WORKDIR /app
 
@@ -23,5 +9,5 @@ COPY . .
 
 EXPOSE 3002
 
-CMD ["python", "app.py"]
+CMD ["python", "inventory_api.py"]
 
