--- a/profile-management/package.json
+++ b/profile-management/package.json
@@ -1,14 +1,10 @@
 {
   "name": "profile-management",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "auth_api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node auth_api.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
