--- a/profile-management/Dockerfile
+++ b/profile-management/Dockerfile
@@ -1,17 +1,3 @@
-# Use the official Node.js image as the base image
-
-# Set the working directory inside the container
-
-# Copy package.json and package-lock.json to the working directory
-
-# Install the dependencies
-
-# Copy the rest of the application source code
-
-# Expose the port that the API listens on
-
-# Run the Node.js application when the container starts
-
 FROM node:18-alpine
 
 WORKDIR /app
@@ -23,5 +9,4 @@ COPY . .
 
 EXPOSE 3003
 
-CMD ["node", "index.js"]
-
+CMD ["npm", "start"]
